[project]
name = "sentinelx"
version = "0.1.0"
description = "Python SDK for SentinelX402 — cyber threat intelligence APIs for AI agents"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "threat-intelligence", "cybersecurity", "phishing-detection",
    "cve", "x402", "ai-agents", "mcp", "security-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sentinelx402/sentinelx-python"
Documentation = "https://github.com/sentinelx402/sentinelx-python#readme"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinelx*"]
